<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/fragment_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        style="?android:attr/buttonBarStyle">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/generate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/gen_label"
            android:textSize="24sp" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/api_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/api_label"
            android:textSize="24sp" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:gravity="center"
            android:text="@string/save_label"
            android:textSize="24sp" />

    </GridLayout>



</LinearLayout>